tests/snapshots/encode_pattern_match__merge_recursive.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/merge_recursive.hvm
---
TaggedScott:
(foo_2_$_bar_2) = λa λb (a, b)

(foo_1_$_bar_1) = λx (x foo_2_$_bar_2)

Scott:
(foo_2_$_bar_2) = λa λb (a, b)

(foo_1_$_bar_1) = λx (x foo_2_$_bar_2)


