tests/snapshots/encode_pattern_match__no_literal_builtin.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/no_literal_builtin.hvm
---
(main) = *

(Foo) = λx #String (x Foo$PSCons Foo$PSNil)

(SCons) = λhead λtail #String λSCons #String λSNil #String.SCons.tail (#String.SCons.head (SCons head) tail)

(SNil) = #String λSCons #String λSNil SNil

(Foo$R0) = 0

(Foo$R1) = λ* 1

(Foo$PSCons) = #String.SCons.head λy0 #String.SCons.tail λy1 (Foo$R1 *)

(Foo$PSNil) = Foo$R0
