tests/snapshots/encode_pattern_match__no_patterns.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/no_patterns.bend
---
Scott
unchecked Id: Any
(Id) = λa a

unchecked Id2: Any
(Id2) = λa a

unchecked Pair: Any
(Pair) = λa λb (a, b)

NumScott
unchecked Id: Any
(Id) = λa a

unchecked Id2: Any
(Id2) = λa a

unchecked Pair: Any
(Pair) = λa λb (a, b)
