tests/snapshots/encode_pattern_match__no_patterns.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/no_patterns.hvm
---
(Id) = λa a

(Id2) = λa a

(Pair) = λa λb (a, b)
