tests/snapshots/encode_pattern_match__ntup_sum.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/ntup_sum.bend
---
(ntupSum) = λa let (b, c, d, e, f) = a; (+ b (+ c (+ d (+ e f))))

(main) = (ntupSum (1, 3, 3, 2, 1))
