tests/snapshots/encode_pattern_match__var_only.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/var_only.hvm
---
(Foo) = λa λb λf (f a)

(main) = λx match x { false: Foo; true: False }

(False) = #Bool λFalse #Bool λTrue False

(True) = #Bool λFalse #Bool λTrue True
